--- a/index.css
+++ b/index.css
@@ -1,5 +1,5 @@
 body {
-    background-image: url("station.jpg");
+    background-image: url("gangLife.png");
     background-size: cover;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     font-weight: bold;
@@ -26,12 +26,34 @@ button {
     width: 200px;
     margin-bottom: 5px;
     border-radius: 5px;
+    cursor: pointer;
 }
 
-#increment-btn {
-    background: darkred;
+.container {
+    background: white;
+    max-width: 60%;
+    margin: auto;
+    border: 3px solid black;
+    border-radius: 10px;
+    margin-top: 150px;
 }
 
-#save-btn {
+.increment-btn {
+    background: rgb(0, 44, 139);
+}
+
+.save-btn {
     background: darkgreen;
+}
+
+.reset {
+    background: red;
+}
+
+.clear {
+    background: rgb(52, 52, 52);
+}
+
+.entity {
+    font-weight: bold;
 }
